# The-Dept.-Admin-Audit-Core-

./: .env.example  .gitignore  Dockerfile  README.md  Transcript.csv  Transcript2.csv  Transcript3.csv  alembic.ini  audit_l1.py  audit_l2.py  audit_l3.py  cse_transcript.csv  docker-compose.dev.yml  docker-compose.yml  mic_transcript.csv  nsu_catalog.json  opencode-mcp.json  program.md  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py  stress_test_cse.csv  stress_test_mic.csv  stress_test_transcript.csv  test_case_cse_03.csv  test_case_cse_05.csv  test_case_cse_06.csv  test_case_cse_07.csv  test_case_cse_08.csv  test_case_cse_10.csv  test_case_cse_102.csv  test_case_cse_103.csv  test_case_cse_104.csv  test_case_cse_108.csv  test_case_cse_110.csv  test_case_cse_111.csv  test_case_cse_116.csv  test_case_cse_118.csv  test_case_cse_119.csv  (+153 more)
Test Cases/: test_case_cse_01.csv  test_case_cse_02.csv  test_case_cse_04.csv  test_case_cse_06.csv  test_case_cse_09.csv  test_case_cse_100.csv  test_case_cse_101.csv  test_case_cse_105.csv  test_case_cse_106.csv  test_case_cse_107.csv  test_case_cse_109.csv  test_case_cse_11.csv  test_case_cse_112.csv  test_case_cse_113.csv  test_case_cse_114.csv  test_case_cse_115.csv  test_case_cse_117.csv  test_case_cse_120.csv  test_case_cse_122.csv  test_case_cse_123.csv  test_case_cse_129.csv  test_case_cse_13.csv  test_case_cse_130.csv  test_case_cse_133.csv  test_case_cse_135.csv  (+103 more)
cli/: api.py  (+3 more)
mcp_server/: pyproject.toml
mcp_server/nsu_audit_mcp/: __init__.py  __main__.py  _auth.py  _client.py  _gdrive.py  _gmail.py  server.py
(+66 files in other folders)
