[build-system]
requires      = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "nsu-audit"
version         = "1.0.0"
description     = "NSU Transcript Audit Tool — CLI"
requires-python = ">=3.9"
dependencies    = [
    "typer>=0.12",
    "httpx>=0.28",
    "rich>=13",
]

[project.scripts]
nsu-audit = "cli.main:main"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cli*"]
